<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/fileList"
            android:layout_width="409dp"
            android:layout_height="300dp"
            tools:layout_editor_absoluteX="1dp"
            tools:layout_editor_absoluteY="1dp" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <EditText
            android:id="@+id/newFileName"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/new_file"
            android:autofillHints=""
            android:imeOptions="actionSend|flagNoEnterAction"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/addImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_file"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/addPdfBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/add_pdf"
            style="?android:attr/buttonBarButtonStyle" />
        <Button
            android:id="@+id/openImageBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/open_image"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        >

        <Button
            android:id="@+id/permissionBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/permission"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/pdfBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_pdf" />
    </LinearLayout>

</LinearLayout>